--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -12,6 +12,7 @@
     position: relative;
     height: 100%;
     margin-right: -70px;
+    
   }
 
   .a-card.bg {
@@ -24,6 +25,7 @@
 .a-right {
     flex: 1;
     height: 90%;
+    border-right: 5px solid;
 }
 
 .a-card {
@@ -51,7 +53,7 @@
 
 .a-desc{
     font-weight: 300px;
-    
+
 }
 
 .a-botR{
